crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_cluster_screen_loading.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Cluster | [?] Unknown                                            │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Cluster Information───────────────────────────────────────────────────────────┐
│                           ⠋ Loading cluster info...                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ⠋ Loading... 0% | Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh ...│
└──────────────────────────────────────────────────────────────────────────────┘
