crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_indexes_screen_empty.snap
---
source: crates/tui/tests/snapshot_screens_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                            │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Indexes───────────────────────────────────────────────────────────────────────┐
│                   No indexes loaded. Press 'r' to refresh.                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                 ┌──────────────────────────┐ │
│                                                 │ Onboarding [0/5] 0%      │ │
│                                                 │ ○ Create Profile         │ │
│                                                 │ ○ Test Connection        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh Enter:Details ...| ?:Help | q:Quit     │
└──────────────────────────────────────────────────────────────────────────────┘
