crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_indexes_screen_loading.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                            │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Indexes───────────────────────────────────────────────────────────────────────┐
│                             ⠋ Loading indexes...                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ⠋ Loading... 0% | Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh ...│
└──────────────────────────────────────────────────────────────────────────────┘
