crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_internal_logs_screen.snap
---
source: crates/tui/tests/snapshot_screens_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Internal Logs | [?] Unknown                                      │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Internal Logs (_internal)─────────────────────────────────────────────────────┐
│   Time       Level      Component    Message                                 │
│>> 2024-01-15 INFO       Metrics      some metrics log message                │
│   2024-01-15 ERROR      DateParser   failed to parse date                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh a:Auto ...| ?:Help | q:Quit            │
└──────────────────────────────────────────────────────────────────────────────┘
