crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_job_details_screen_no_job.snap
---
source: crates/tui/tests/snapshot_screens_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Job Details | [?] Unknown                                        │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Job Details───────────────────────────────────────────────────────────────────┐
│                      No job selected or jobs not loaded.                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev  | Esc:Back | Esc:Back ...| ?:Help | q:Quit        │
└──────────────────────────────────────────────────────────────────────────────┘
