crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_job_details_screen_running_job.snap
---
source: crates/tui/tests/snapshot_screens_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Job Details | [?] Unknown                                        │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Job Details───────────────────────────────────────────────────────────────────┐
│                         Job: admin_search_9876543210                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Status: Running (65%)                                                         │
│Duration: 12.45 seconds                                                       │
│Event Count: 2000                                                             │
│Scan Count: 5000                                                              │
│Result Count: 450                                                             │
│Disk Usage: 5120 MB                                                           │
│Priority: 3                                                                   │
│Label: Ad-hoc search                                                          │
│Cursor Time: 2024-01-15T10:29:00.000Z                                         │
│Finalized: No                                                                 │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev  | Esc:Back | Esc:Back ...| ?:Help | q:Quit        │
└──────────────────────────────────────────────────────────────────────────────┘
