crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_job_details_screen_with_help_popup.snap
---
source: crates/tui/tests/snapshot_screens_tests.rs
assertion_line: 89
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Job Details | [?] Unknown                                        │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Job Details───────────────────────────────────────────────────────────────────┐
│                    Job: scheduler_admin_search_1234567890                    │
└───────────────┌Help──────────────────────────────────────────┐───────────────┘
┌───────────────│Global Keys:                                  ↑───────────────┐
│Status: Done   │  ?               Help                        █               │
│Duration: 5.23 │  q               Quit                        ║               │
│Event Count: 50│  Ctrl+Q          Quit (global)               ║               │
│Scan Count: 150│  Tab             Next screen                 ║               │
│Result Count: 1│  Shift+Tab       Previous screen             ║               │
│Disk Usage: 204│  Ctrl+Tab        Next focus                  ║               │
│Priority: 5    │  Ctrl+Shift+Tab  Previous focus              ║               │
│Label: Schedule│  Ctrl+c          Copy to clipboard           ║               │
│Cursor Time: 20│                                              ↓               │
│Finalized: No  └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | Esc:Back ...| ?:Help | q:Quit  │
└──────────────────────────────────────────────────────────────────────────────┘
