crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_users_screen_loading.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Users | [?] Unknown                                              │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Users─────────────────────────────────────────────────────────────────────────┐
│                              ⠋ Loading users...                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ⠋ Loading... 0% | Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh ...│
└──────────────────────────────────────────────────────────────────────────────┘
