crates/tui/tests/snapshots/snapshot_screens_tests__snapshot_users_screen_with_data.snap
---
source: crates/tui/tests/snapshot_screens_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Users | [?] Unknown                                              │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Users─────────────────────────────────────────────────────────────────────────┐
│admin (System Administrator) - Roles: admin, can_delete - Last login: 17369562│
│power_user (Power User) - Roles: power - Last login: 1736870400s              │
│user_no_roles (Limited User) - Roles: no roles - Last login: never            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh j/k or Up/Down:Navigate| ?:Help | q:Qui│
└──────────────────────────────────────────────────────────────────────────────┘
